--- a/MvcMusic/Web.config
+++ b/MvcMusic/Web.config
@@ -9,6 +9,9 @@
     <add name="MusicStoreEntities"
      connectionString="Data Source=|DataDirectory|MvcMusicStore.sdf"
      providerName="System.Data.SqlServerCe.4.0"/>
+    <!--<add name="MusicStoreEntities"
+         connectionString="Data Source=127.0.0.1;Initial Catalog=MvcMusicStore;Persist Security Info=True;User ID=sa;Password=wanyun"
+           providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0"/>
@@ -17,6 +20,7 @@
   </appSettings>
 
   <system.web>
+    <roleManager enabled="true" />
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
